--- a/main.css
+++ b/main.css
@@ -2,6 +2,10 @@
   font-family:Raleway
 }
 
+#backdrop {
+  background-color:#0336FF
+}
+
 #mainJumbotron {
   background-color:#0336FF
 }
@@ -11,6 +15,11 @@
   font-weight: 300;
   color:#FFDE03;
   font-size: 60px;
+  letter-spacing: 3px;
+}
+
+.navbar.fixed-top {
+  background-color:#0336FF
 }
 
 .navbar-brand {
