--- a/main.css
+++ b/main.css
@@ -7,25 +7,26 @@
 }
 
 #mainJumbotron {
-  background-color:#673AB7;
+  background-color:#FFFFFF;
+  color:#313131;
   margin-bottom: 0;
 }
 
 h3 {
   font-family:Rubik, sans-serif;
   font-weight: 300;
-  color:#FFFFFF;
+  color:#313131;
   font-size: 60px;
   letter-spacing: 3px;
 }
 
 .navbar.fixed-top {
-  background-color:#320B86
+  background-color:#FFFFFF
 }
 
 .navbar-brand {
   font-family:Rubik, sans-serif;
-  color:#FFFFFF;
+  color:#313131;
   font-size: 21px;
   letter-spacing: 1px;
 }
@@ -33,7 +34,7 @@ h3 {
 #homeNavLinks a {
   font-family: Rubik, sans-serif;
   font-weight: 300;
-  color: #FFFFFF;
+  color: #313131;
   font-size: 18px;
 }
 
