--- a/main.css
+++ b/main.css
@@ -40,16 +40,15 @@ h3 {
 
 .project-name {
   font-family: Raleway, sans-serif;
-  color: #000000;
+  color: #313131;
   font-size: 21px;
-  font-weight: 700;
+  font-weight: 500;
   margin-bottom: 0;
 }
 
 .project-type {
   font-family: Raleway, sans-serif;
-  color: #320B86;
-  font-size: 21px;
-  letter-spacing: 2px;
-  font-weight: 700;
+  color: #673AB7;
+  font-size: 18px;
+  font-weight: 300;
 }
