--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 .container {
-  font-family:Raleway
+  font-family:Raleway;
+  color:#313131;
 }
 
 .caption {
@@ -7,18 +8,35 @@
 }
 
 #mainJumbotron {
-  background-color:#FFFFFF;
-  color:#313131;
-  margin-bottom: 0;
-  height:90vh;
+  background-color:white;
+  height:85vh;
+}
+
+h1 {
+
+}
+
+h2 {
+
 }
 
 h3 {
   font-family:Rubik, sans-serif;
   font-weight: 300;
-  color:#313131;
   font-size: 60px;
-  letter-spacing: 3px;
+  letter-spacing: 2px;
+}
+
+h4 {
+
+}
+
+h5 {
+
+}
+
+h6 {
+
 }
 
 .navbar.fixed-top {
@@ -32,11 +50,20 @@ h3 {
   letter-spacing: 1px;
 }
 
-#homeNavLinks a {
+.nav-link {
+  font-size:16px;
+  letter-spacing:2px;
+  color:#313131;
+  font-weight:500;
   font-family: Rubik, sans-serif;
-  font-weight: 300;
-  color: #313131;
-  font-size: 18px;
+}
+
+.nav-link.current-link {
+  font-size:16px;
+  letter-spacing:2px;
+  color:#673AB7;
+  font-weight:500;
+  font-family: Rubik, sans-serif;
 }
 
 .project-name {
