--- a/main.css
+++ b/main.css
@@ -71,6 +71,10 @@ h6 {
   font-family: Rubik, sans-serif;
 }
 
+.project-card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 .project-name {
   font-family: Raleway, sans-serif;
   color: #313131;
