--- a/main.css
+++ b/main.css
@@ -3,9 +3,7 @@
   color:#313131;
 }
 
-.caption {
-  text-align:center;
-}
+
 
 #mainJumbotron {
   background-color:white;
@@ -73,6 +71,17 @@ h6 {
 
 .project-card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  max-width: 500px;
+  margin-bottom: 25px;
+}
+
+.project-image {
+
+}
+
+.caption {
+  text-align:center;
+  padding: 10px;
 }
 
 .project-name {
