--- a/main.css
+++ b/main.css
@@ -82,7 +82,7 @@ h6 {
 
 .caption {
   text-align:center;
-  padding: 10px;
+  padding: 15px;
 }
 
 .project-name {
@@ -98,6 +98,7 @@ h6 {
   color: #673AB7;
   font-size: 18px;
   font-weight: 500;
+  margin-bottom: 0;
 }
 
 footer {
