--- a/main.css
+++ b/main.css
@@ -101,6 +101,12 @@ h6 {
   margin-bottom: 0;
 }
 
+.project-page-card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  padding: 15px;
+  margin-bottom: 5vh;
+}
+
 footer {
   margin-top: 50px;
   margin-bottom: 50px;
