--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 .container {
-  font-family:Raleway;
+  font-family:'Sarabun', sans-serif;
   color:#313131;
 }
 
@@ -16,30 +16,30 @@
 }
 
 h1 {
-  font-family:Rubik, sans-serif;
+  font-family:'Sarabun', sans-serif;
 }
 
 h2 {
-  font-family:Rubik, sans-serif;
+  font-family:'Sarabun', sans-serif;
 }
 
 h3 {
-  font-family:Rubik, sans-serif;
+  font-family:'Sarabun', sans-serif;
   font-weight: 300;
   font-size: 60px;
   letter-spacing: 2px;
 }
 
 h4 {
-  font-family:Rubik, sans-serif;
+  font-family:'Sarabun', sans-serif;
 }
 
 h5 {
-  font-family:Rubik, sans-serif;
+  font-family:'Sarabun', sans-serif;
 }
 
 h6 {
-  font-family:Rubik, sans-serif;
+  font-family:'Sarabun', sans-serif;
 }
 
 .navbar.fixed-top {
@@ -47,7 +47,7 @@ h6 {
 }
 
 .navbar-brand {
-  font-family:Rubik, sans-serif;
+  font-family:'Sarabun', sans-serif;
   color:#313131;
   font-size: 21px;
   letter-spacing: 1px;
@@ -58,7 +58,7 @@ h6 {
   letter-spacing:2px;
   color:#313131;
   font-weight:500;
-  font-family: Rubik, sans-serif;
+  font-family: 'Sarabun', sans-serif;
 }
 
 .nav-link.current-link {
@@ -66,7 +66,7 @@ h6 {
   letter-spacing:2px;
   color:#673AB7;
   font-weight:500;
-  font-family: Rubik, sans-serif;
+  font-family: 'Sarabun', sans-serif;
 }
 
 .project-card {
@@ -85,7 +85,7 @@ h6 {
 }
 
 .project-name {
-  font-family: Raleway, sans-serif;
+  font-family: 'Sarabun', sans-serif;
   color: #313131;
   font-size: 21px;
   font-weight: 300;
@@ -93,7 +93,7 @@ h6 {
 }
 
 .project-type {
-  font-family: Raleway, sans-serif;
+  font-family: 'Sarabun', sans-serif;
   color: #673AB7;
   font-size: 18px;
   font-weight: 500;
@@ -101,9 +101,7 @@ h6 {
 }
 
 .project-page-card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  padding: 15px;
-  margin-bottom: 5vh;
+  margin-bottom: 15vh;
 }
 
 footer {
