--- a/main.css
+++ b/main.css
@@ -13,6 +13,11 @@
 .project-jumbotron {
   color:#313131;
   background-color:#FFFFFF;
+  height: 70vh;
+}
+
+.text-highlight {
+  color: #673AB7;
 }
 
 h1 {
