--- a/main.css
+++ b/main.css
@@ -1,9 +1,11 @@
+a:hover {
+  text-decoration: none;
+}
+
 .container {
   font-family:'Sarabun', sans-serif;
   color:#313131;
 }
-
-
 
 #mainJumbotron {
   background-color:white;
@@ -83,6 +85,13 @@ h6 {
   width:100%;
   height:auto;
 }
+
+.project-card:hover {
+  /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
+  opacity: 0.7;
+}
+
+
 
 .caption {
   text-align:center;
