--- a/main.css
+++ b/main.css
@@ -2,6 +2,10 @@ a:hover {
   text-decoration: none;
 }
 
+a {
+  color: #673AB7;
+}
+
 .container {
   font-family:'Sarabun', sans-serif;
   color:#313131;
@@ -19,7 +23,7 @@ a:hover {
 }
 
 .text-highlight {
-  color: #673AB7;
+  #color: #673AB7;
 }
 
 h1 {
