--- a/main.css
+++ b/main.css
@@ -90,7 +90,7 @@ h6 {
   font-family:'Sarabun', sans-serif;
 }
 
-.navbar {
+.navbar-custom {
   background-color:white;
 }
 
@@ -100,14 +100,14 @@ h6 {
   top: 0px;
 }
 
-.navbar-brand {
+.navbar-custom .navbar-brand {
   font-family:'Sarabun', sans-serif;
   color:#313131;
   font-size: 21px;
   letter-spacing: 1px;
 }
 
-.nav-link {
+.navbar-custom .navbar-nav .nav-link {
   font-size:16px;
   letter-spacing:2px;
   color:#313131;
