--- a/main.css
+++ b/main.css
@@ -189,6 +189,49 @@ h6 {
   margin-top: 2px;
 }
 
+/* ======================================= */
+/* Gallery code adapted from https://mdbootstrap.com/plugins/jquery/gallery/ */
+.gallery-three-column {
+  -webkit-column-count: 3;
+  -moz-column-count: 3;
+  column-count: 3;
+  -webkit-column-width: 33%;
+  -moz-column-width: 33%;
+  column-width: 33%;
+}
+
+@media (max-width: 450px) {
+  .gallery-three-column {
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+    column-count: 1;
+    -webkit-column-width: 100%;
+    -moz-column-width: 100%;
+    column-width: 100%;
+  }
+}
+
+.gallery-two-column {
+  -webkit-column-count: 2;
+  -moz-column-count: 2;
+  column-count: 2;
+  -webkit-column-width: 50%;
+  -moz-column-width: 50%;
+  column-width: 50%;
+}
+
+@media (max-width: 450px) {
+  .gallery-two-column {
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+    column-count: 1;
+    -webkit-column-width: 100%;
+    -moz-column-width: 100%;
+    column-width: 100%;
+  }
+}
+/* ======================================= */
+
 footer {
   margin-top: 50px;
   margin-bottom: 50px;
