--- a/main.css
+++ b/main.css
@@ -164,6 +164,7 @@ h6 {
   margin-bottom: 0;
 }
 
+/* <!--- This is going to get replaced ---> */
 .project-page-card {
   margin-bottom: 15vh;
 }
@@ -173,6 +174,12 @@ h6 {
   margin-right: auto;
   margin-bottom: 20px;
 }
+
+/* <!--- This is going to replace it ---> */
+.project-section {
+  margin-top: 25vh;
+}
+
 
 .sticky-project-nav {
   position: -webkit-sticky;
