--- a/main.css
+++ b/main.css
@@ -117,7 +117,7 @@ h6 {
 .navbar-custom .navbar-nav .nav-link {
   font-size:16px;
   letter-spacing:2px;
-  color:#7D7D7D;
+  color:#313131;
   font-weight:500;
   font-family: 'Roboto', sans-serif;
 }
@@ -274,7 +274,7 @@ footer {
 }
 
 .footer-email {
-  color:grey;
+  color:#313131;
 }
 .footer-email:hover {
   color:#673AB7;
