--- a/main.css
+++ b/main.css
@@ -53,6 +53,7 @@ p {
 }
 .hero-text:hover {
   text-decoration: none;
+  color: #313131;
 }
 
 h1 {
@@ -182,12 +183,12 @@ h6 {
   opacity: 0.7;
 }
 
-.caption {
+.project-card .caption {
   text-align:center;
   padding: 15px;
 }
 
-.project-name {
+.project-card .project-name {
   font-family: 'Roboto', sans-serif;
   color: #313131;
   font-size: 21px;
@@ -195,7 +196,7 @@ h6 {
   margin-bottom: 0;
 }
 
-.project-type {
+.project-card .project-type {
   font-family: 'Roboto', sans-serif;
   color: #673AB7;
   font-size: 18px;
