--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -1,29 +1,25 @@
-@import 'variables.less';
-
 .copy-emphasis {
-  color: @purple;
+  color: #673AB7;
 }
-
 .homepage-header {
   line-height: 0;
   margin: 10em auto;
 }
-
 .row {
   display: flex;
   flex-wrap: wrap;
 }
-
 .col-half {
   width: 50%;
   display: block;
   padding: 1rem;
   text-align: left;
-  @media only screen and (max-width: 768px) {
+}
+@media only screen and (max-width: 768px) {
+  .col-half {
     width: 100%;
   }
 }
-
 .thumbnail {
   max-width: 100%;
   height: auto;
