initial thumbnail styles completed

--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -2,8 +2,10 @@
   color: #673AB7;
 }
 .homepage-header {
-  line-height: 0;
-  margin: 10em auto;
+  margin-top: 7em;
+  margin-bottom: 7em;
+  text-align: left;
+  max-width: 40em;
 }
 .row {
   display: flex;
@@ -23,4 +25,10 @@
 .thumbnail {
   max-width: 100%;
   height: auto;
+}
+.project-label {
+  line-height: 0.25;
+}
+.project-label h4 {
+  color: #673AB7;
 }
