--- a/styles/less/index.less
+++ b/styles/less/index.less
@@ -5,8 +5,10 @@
 }
 
 .homepage-header {
-  line-height: 0;
-  margin: 10em auto;
+  margin-top: 7em;
+  margin-bottom: 7em;
+  text-align: left;
+  max-width: 40em;
 }
 
 .row {
@@ -27,4 +29,12 @@
 .thumbnail {
   max-width: 100%;
   height: auto;
+}
+
+.project-label {
+  line-height: 0.25;
+}
+
+.project-label h4 {
+  color: @purple;
 }
