--- a/styles/css/base.css
+++ b/styles/css/base.css
@@ -66,6 +66,7 @@ a:not(:first-child) {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: flex-start;
   text-align: center;
   max-width: 1140px;
   margin: auto;
