--- a/styles/less/base.less
+++ b/styles/less/base.less
@@ -74,6 +74,7 @@ a:not(:first-child) {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: flex-start;
   text-align: center;
   max-width: 1140px;
   margin: auto;
