--- a/styles/css/base.css
+++ b/styles/css/base.css
@@ -63,13 +63,52 @@ body {
   }
 }
 .container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  text-align: center;
   max-width: 1140px;
-  margin: auto;
+  width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -15px;
+  margin-right: -15px;
+}
+.align-center {
+  display: block;
+  margin: 0 auto;
+}
+@media only screen and (min-width: 768px) {
+  .col-half {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+}
+.col-half,
+.col-full {
+  position: relative;
+  width: 100%;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+.photo-array {
+  flex: 50%;
+  max-width: 50%;
+  padding: 0 5px;
+}
+@media screen and (max-width: 600px) {
+  .photo-array {
+    flex: 100%;
+    max-width: 100%;
+  }
+}
+.photo-array img {
+  margin-top: 10px;
+  vertical-align: middle;
+  width: 100%;
 }
 .condensed-text-wrapper {
   line-height: 0.5;
