--- a/styles/css/projects.css
+++ b/styles/css/projects.css
@@ -1,8 +1,22 @@
 img {
   max-width: 100%;
 }
-.header {
+.project-title {
   margin: 6rem auto;
+}
+.project-title h1 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.project-name {
+  font-size: 4.5em;
+}
+.project-subtitle {
+  font-size: 4.5em;
+  font-weight: lighter;
+}
+.project-summary {
+  margin-bottom: 1rem;
 }
 .text-wrapper {
   width: 775px;
