--- a/styles/less/base.less
+++ b/styles/less/base.less
@@ -11,6 +11,10 @@ body {
   font-size: 100%;
 }
 
+p {
+  line-height: 1.6;
+}
+
 /* Add a black background color to the top navigation */
 .topnav {
  background-color: @white;
