implemented page-specific color scheme

--- a/styles/less/3de.less
+++ b/styles/less/3de.less
@@ -1,5 +1,9 @@
 @import 'variables.less';
 
+h1, h2, h3, a {
+  color : @3de-project;
+}
+
 .side-by-side {
   display: flex;
   justify-content: space-between;
