--- a/styles/less/base.less
+++ b/styles/less/base.less
@@ -25,7 +25,7 @@ p {
 .topnav a {
  float: left;
  display: block;
- color: @copy;
+ color: @dark-grey;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
@@ -37,12 +37,12 @@ p {
 
 /* Change the color of links on hover */
 .topnav a:hover {
- color: @purple;
+ color: @copy;
 }
 
 /* Add an active class to highlight the current page */
 .topnav a.active {
- color: @purple;
+ color: @copy;
 }
 
 /* Hide the link that should open and close the topnav on small screens */
@@ -133,13 +133,13 @@ p {
 .footer a {
   font-weight: bold;
   text-decoration: none;
-  color: @copy;
+  color: @dark-grey;
 }
 
 .footer a:hover {
-  color: @purple;
+  color: @copy;
 }
 
 .copy-low-emphasis {
-  color: #A9A9A9;
+  color: @dark-grey;
 }
