--- a/styles/less/index.less
+++ b/styles/less/index.less
@@ -1,8 +1,8 @@
 @import 'variables.less';
 
-.copy-emphasis {
-  color: @purple;
-}
+// .copy-emphasis {
+//   color: @purple;
+// }
 
 .homepage-header {
   margin-top: 7em;
@@ -20,10 +20,10 @@
   height: auto;
 }
 
-.project-label {
-  line-height: 0.25;
-}
-
-.project-label h4 {
-  color: @purple;
-}
+// .project-label {
+//   line-height: 0.25;
+// }
+//
+// .project-label h4 {
+//   color: @purple;
+// }
