--- a/styles/less/index.less
+++ b/styles/less/index.less
@@ -20,10 +20,6 @@
   height: auto;
 }
 
-// .project-label {
-//   line-height: 0.25;
-// }
-//
-// .project-label h4 {
-//   color: @purple;
-// }
+.project-card-buffer {
+  margin-bottom: 30px;
+}
