--- a/styles/css/base.css
+++ b/styles/css/base.css
@@ -86,12 +86,19 @@ p {
   }
 }
 @media only screen and (min-width: 768px) {
+  .col-third {
+    flex: 0 0 33%;
+    max-width: 33%;
+  }
+}
+@media only screen and (min-width: 768px) {
   .col-half {
     flex: 0 0 50%;
     max-width: 50%;
   }
 }
 .col-quarter,
+.col-third,
 .col-half,
 .col-full {
   position: relative;
