--- a/styles/less/index.less
+++ b/styles/less/index.less
@@ -18,6 +18,12 @@
 .thumbnail {
   max-width: 100%;
   height: auto;
+  transition: translate 0.5s;
+}
+
+.thumbnail:hover {
+  opacity: 0.6;
+  translate: 0px -10px;
 }
 
 .project-card-buffer {
