--- a/styles/css/base.css
+++ b/styles/css/base.css
@@ -2,8 +2,9 @@
   box-sizing: border-box;
 }
 body {
-  font-family: 'Roboto', 'Open Sans', sans-serif;
-  font-weight: 500;
+  font-family: objektiv-mk2, sans-serif;
+  font-weight: 400;
+  font-style: normal;
   color: #313131;
   font-size: 100%;
 }
