--- a/styles/less/base.less
+++ b/styles/less/base.less
@@ -5,8 +5,11 @@
 }
 
 body {
-  font-family: 'Roboto', 'Open Sans', sans-serif;
-  font-weight: 500;
+  font-family: objektiv-mk2, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  // font-family: 'Roboto', 'Open Sans', sans-serif;
+  // font-weight: 500;
   color: @copy;
   font-size: 100%;
 }
