--- a/styles/css/projects.css
+++ b/styles/css/projects.css
@@ -16,7 +16,8 @@ li {
 }
 .project-subtitle {
   font-size: 4.5em;
-  font-weight: lighter;
+  font-weight: 300;
+  letter-spacing: -0.05em;
 }
 .project-summary {
   margin-bottom: 1rem;
@@ -27,7 +28,7 @@ li {
   margin: 0 auto;
 }
 .text-wrapper p {
-  line-height: 1.6;
+  line-height: 1.8;
 }
 .float-right {
   float: right;
