--- a/styles/less/projects.less
+++ b/styles/less/projects.less
@@ -21,7 +21,8 @@ li {
 
 .project-subtitle {
   font-size: 4.5em;
-  font-weight: lighter;
+  font-weight: 300;
+  letter-spacing: -0.05em;
 }
 
 .project-summary {
@@ -35,7 +36,7 @@ li {
 }
 
 .text-wrapper p {
-  line-height: 1.6;
+  line-height: 1.8;
 }
 
 .float-right {
