initial new format created

--- a/styles/less/projects.less
+++ b/styles/less/projects.less
@@ -16,17 +16,18 @@ li {
 }
 
 .project-name {
-  font-size: 4.5em;
+  font-size: 3em;
 }
 
 .project-subtitle {
-  font-size: 4.5em;
+  font-size: 3em;
   font-weight: 300;
   letter-spacing: -0.05em;
 }
 
-.project-summary {
-  margin-bottom: 1rem;
+.project-details {
+  font-size: 0.8rem;
+  color: #757575;
 }
 
 .text-wrapper {
