--- a/styles/css/projects.css
+++ b/styles/css/projects.css
@@ -12,15 +12,16 @@ li {
   margin-bottom: 0;
 }
 .project-name {
-  font-size: 4.5em;
+  font-size: 3em;
 }
 .project-subtitle {
-  font-size: 4.5em;
+  font-size: 3em;
   font-weight: 300;
   letter-spacing: -0.05em;
 }
-.project-summary {
-  margin-bottom: 1rem;
+.project-details {
+  font-size: 0.8rem;
+  color: #757575;
 }
 .text-wrapper {
   width: 775px;
