--- a/styles/less/projects.less
+++ b/styles/less/projects.less
@@ -6,16 +6,16 @@ li {
   line-height: 1.6;
 }
 
+// .project-title {
+//   margin: 3rem auto;
+// }
+//
+// .project-title h1 {
+//   margin-top: 0;
+//   margin-bottom: 0;
+// }
+
 .project-title {
-  margin: 3rem auto;
-}
-
-.project-title h1 {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.project-name {
   font-size: 3em;
 }
 
