--- a/styles/css/base.css
+++ b/styles/css/base.css
@@ -120,6 +120,18 @@ p {
 .margin-bottom-4 {
   margin-bottom: 4rem;
 }
+.margin-bottom-5 {
+  margin-bottom: 5rem;
+}
+.margin-bottom-6 {
+  margin-bottom: 6rem;
+}
+.margin-bottom-7 {
+  margin-bottom: 7rem;
+}
+.margin-bottom-8 {
+  margin-bottom: 8rem;
+}
 .margin-top-1 {
   margin-top: 1rem;
 }
