First pass of the back to top button is working

--- a/styles/less/base.less
+++ b/styles/less/base.less
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: objektiv-mk2, sans-serif;
   font-style: normal;
