--- a/styles/css/base.css
+++ b/styles/css/base.css
@@ -1,6 +1,9 @@
 * {
   box-sizing: border-box;
 }
+html {
+  scroll-behavior: smooth;
+}
 body {
   font-family: objektiv-mk2, sans-serif;
   font-style: normal;
