Added button to mapme project

--- a/styles/less/components.less
+++ b/styles/less/components.less
@@ -4,16 +4,21 @@
   display: none;
   position: fixed;
   bottom: 20px;
-  right: 30px;
+  right: 40px;
   z-index: 99;
   border: none;
   outline: none;
   background-color: @me-purple;
   color: white;
   cursor: pointer;
-  padding: 15px;
-  border-radius: 10px;
-  font-size: 18px;
+
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  border-radius: 20px;
+
+  font-family: objektiv-mk2, sans-serif;
 }
 
 .top-button:hover {
