--- a/styles/less/mapme.less
+++ b/styles/less/mapme.less
@@ -3,3 +3,7 @@
 h1, h2, h3, a, .project-title, .project-subtitle {
   color : @mapme-project;
 }
+
+.top-button {
+  background-color: @mapme-project;
+}
