added button to internship page

--- a/styles/less/ai_internship.less
+++ b/styles/less/ai_internship.less
@@ -4,6 +4,10 @@ h1, h2, h3, a, .project-title, .project-subtitle {
   color : @ai-internship;
 }
 
+.top-button {
+  background-color: @ai-internship;
+}
+
 .screenshot {
   border: solid 1px @ai-internship;
 }
