--- a/styles/css/ai_internship.css
+++ b/styles/css/ai_internship.css
@@ -6,6 +6,9 @@ a,
 .project-subtitle {
   color: #00274C;
 }
+.top-button {
+  background-color: #00274C;
+}
 .screenshot {
   border: solid 1px #00274C;
 }
