added button to internship page

--- a/styles/less/622.less
+++ b/styles/less/622.less
@@ -3,3 +3,7 @@
 h1, h2, h3, a, .project-title, .project-subtitle {
   color : @622-project;
 }
+
+.top-button {
+  background-color: @622-project;
+}
