added button to 3de page

--- a/styles/css/3de.css
+++ b/styles/css/3de.css
@@ -6,6 +6,9 @@ a,
 .project-subtitle {
   color: #FF404F;
 }
+.top-button {
+  background-color: #FF404F;
+}
 .side-by-side {
   display: flex;
   justify-content: space-between;
