--- a/styles/less/3de.less
+++ b/styles/less/3de.less
@@ -4,6 +4,10 @@ h1, h2, h3, a, .project-title, .project-subtitle {
   color : @3de-project;
 }
 
+.top-button {
+  background-color: @3de-project;
+}
+
 .side-by-side {
   display: flex;
   justify-content: space-between;
