Added goodlistens header

--- a/styles/less/variables.less
+++ b/styles/less/variables.less
@@ -8,7 +8,11 @@
 
 @me-purple: #673AB7;
 
+// Design Projects
 @3de-project: #FF404F;
 @622-project: #4b8bcc;
 @mapme-project: #1CBFF5;
 @ai-internship: #00274C;
+
+// Dev projects
+@goodlistens: #FF7541;
