Further additions to GL page

--- a/styles/css/goodlistens.css
+++ b/styles/css/goodlistens.css
@@ -4,8 +4,8 @@ h3,
 a,
 .project-title,
 .project-subtitle {
-  color: #FF7541;
+  color: #585858;
 }
 .top-button {
-  background-color: #FF7541;
+  background-color: #585858;
 }
