--- a/styles/less/base.less
+++ b/styles/less/base.less
@@ -116,7 +116,14 @@ p {
   }
 }
 
-.col-quarter, .col-third, .col-half, .col-full {
+.col-two-thirds {
+  @media only screen and (min-width: 768px) {
+    flex: 0 0 67%;
+    max-width: 67%;
+  }
+}
+
+.col-quarter, .col-third, .col-half, .col-two-thirds, .col-full {
   position: relative;
   width: 100%;
   min-height: 1px;
