--- a/styles/less/goodlistens.less
+++ b/styles/less/goodlistens.less
@@ -7,3 +7,32 @@ h1, h2, h3, a, .project-title, .project-subtitle {
 .top-button {
   background-color: @goodlistens;
 }
+
+.features-table {
+  width: 100%;
+  display: flex;
+}
+
+.feature-column {
+  width: 33%;
+}
+
+.feature-column ul {
+  list-style-type: none;
+  padding: 0 0.5rem 0 0;
+}
+
+.feature-complete {
+  background-color: #23E893;
+  padding: 0.25rem 1rem;
+}
+
+.feature-partial {
+  background-color: #FFE54B;
+  padding: 0.25rem 1rem;
+}
+
+.feature-incomplete {
+  background-color: #FF9179;
+  padding: 0.25rem 1rem;
+}
