--- a/styles/css/sorting.css
+++ b/styles/css/sorting.css
@@ -9,3 +9,24 @@ a,
 .top-button {
   background-color: #7156FF;
 }
+.screenshot {
+  border: solid 1px #313131;
+}
+.demo-button {
+  border: none;
+  outline: none;
+  background-color: #7156FF;
+  color: white;
+  cursor: pointer;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  border-radius: 20px;
+  margin: auto;
+  display: table;
+  font-family: objektiv-mk2, sans-serif;
+}
+.top-button:hover {
+  background-color: #787878;
+}
