--- a/styles/less/sorting.less
+++ b/styles/less/sorting.less
@@ -7,3 +7,29 @@ h1, h2, h3, a, .project-title, .project-subtitle {
 .top-button {
   background-color: @sorting;
 }
+
+.screenshot {
+  border: solid 1px @copy;
+}
+
+.demo-button {
+  border: none;
+  outline: none;
+  background-color: @sorting;
+  color: white;
+  cursor: pointer;
+
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  border-radius: 20px;
+  margin: auto;
+  display: table;
+
+  font-family: objektiv-mk2, sans-serif;
+}
+
+.top-button:hover {
+  background-color: @dark-grey;
+}
