--- a/styles/css/ai_internship.css
+++ b/styles/css/ai_internship.css
@@ -9,6 +9,15 @@ a,
 .top-button {
   background-color: #00274C;
 }
+figure {
+  margin-left: 0;
+  margin-right: 0;
+}
+figcaption {
+  font-size: 0.8rem;
+  font-style: italic;
+}
 .screenshot {
-  border: solid 1px #00274C;
+  border: solid 1px #A9A9A9;
+  box-shadow: 0px 5px 5px grey;
 }
