--- a/styles/less/ai_internship.less
+++ b/styles/less/ai_internship.less
@@ -8,6 +8,18 @@ h1, h2, h3, a, .project-title, .project-subtitle {
   background-color: @ai-internship;
 }
 
+figure {
+  margin-left: 0;
+  margin-right: 0;
+}
+
+figcaption {
+  font-size: 0.8rem;
+  font-style: italic;
+}
+
 .screenshot {
-  border: solid 1px @ai-internship;
+  border: solid 1px @light-grey;
+  box-shadow: 0px 5px 5px grey;
+  // border-radius: 5px;
 }
