--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -8,13 +8,19 @@
   line-height: 1.6;
 }
 .thumbnail {
-  max-width: 100%;
-  height: auto;
   transition: translate 0.5s;
 }
 .thumbnail:hover {
   opacity: 0.6;
   translate: 0px -10px;
+}
+.thumbnail a {
+  text-decoration: none;
+  color: #313131;
+}
+.thumbnail-img {
+  max-width: 100%;
+  height: auto;
 }
 .project-card-buffer {
   margin-bottom: 30px;
