Created new files for encore project and filled in initial copy

--- a/styles/less/variables.less
+++ b/styles/less/variables.less
@@ -13,6 +13,7 @@
 @622-project: #4b8bcc;
 @mapme-project: #1CBFF5;
 @ai-internship: #00274C;
+@encore: #2DAFBA;
 
 // Dev projects
 @goodlistens: #585858;
